--- a/app/src/main/res/xml/qwerty.xml
+++ b/app/src/main/res/xml/qwerty.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
 android:keyWidth="10%p"
-android:horizontalGap="3px"
-android:verticalGap="3px"
+android:horizontalGap="4px"
+android:verticalGap="4px"
 android:keyHeight="60dp"
 android:keyTextColor="@color/colorAccent"
 android:keyBackground="@color/colorPrimaryDark"
@@ -37,52 +37,103 @@ android:keyBackground="@color/colorPrimaryDark"
         <Key android:codes="112" android:keyLabel="p" android:keyEdgeFlags="right"/>
     </Row>
 
+
+
     <Row>
-        <Key android:keyLabel="a"
+        <Key
             android:codes="97"
-            android:keyEdgeFlags="left"/>
-
-        <Key android:keyLabel="s" android:codes="115" />
-        <Key android:keyLabel="d" android:codes="100" />
-        <Key android:keyLabel="f" android:codes="102" />
-        <Key android:keyLabel="g" android:codes="103" />
-        <Key android:keyLabel="h" android:codes="104" />
-        <Key android:keyLabel="j" android:codes="106" />
-        <Key android:keyLabel="k" android:codes="107" />
-        <Key android:keyLabel="l" android:codes="108" />
-        <Key android:keyLabel="\# \@" android:codes="35,64"  android:keyEdgeFlags="right"/>
-
+            android:keyEdgeFlags="left"
+            android:keyLabel="a" />
+        <Key
+            android:codes="115"
+            android:keyLabel="s" />
+        <Key
+            android:codes="100"
+            android:keyLabel="d" />
+        <Key
+            android:codes="102"
+            android:keyLabel="f" />
+        <Key
+            android:codes="103"
+            android:keyLabel="g" />
+        <Key
+            android:codes="104"
+            android:keyLabel="h" />
+        <Key
+            android:codes="106"
+            android:keyLabel="j" />
+        <Key
+            android:codes="107"
+            android:keyLabel="k" />
+        <Key
+            android:codes="108"
+            android:keyEdgeFlags="right"
+            android:keyLabel="l" />
     </Row>
 
-
-    <Row >
-        <Key android:keyLabel="CAPS"
+    <Row>
+        <Key
             android:codes="-1"
-            android:keyEdgeFlags="left"/>
-
-        <Key android:keyLabel="z" android:codes="122" />
-        <Key android:keyLabel="x" android:codes="120" />
-        <Key android:keyLabel="c" android:codes="99" />
-        <Key android:keyLabel="v" android:codes="118" />
-        <Key android:keyLabel="b" android:codes="98" />
-        <Key android:keyLabel="n" android:codes="110" />
-        <Key android:keyLabel="m" android:codes="109" />
-        <Key android:keyLabel="." android:codes="46" />
-        <Key android:keyLabel="\? ! :" android:codes="63,33,58"  android:keyEdgeFlags="right"/>
-
+            android:isModifier="true"
+            android:isSticky="true"
+            android:keyEdgeFlags="left"
+            android:keyIcon="@drawable/sym_keyboard_shift"
+            android:keyWidth="15%p" />
+        <Key
+            android:codes="122"
+            android:keyLabel="z" />
+        <Key
+            android:codes="120"
+            android:keyLabel="x" />
+        <Key
+            android:codes="99"
+            android:keyLabel="c" />
+        <Key
+            android:codes="118"
+            android:keyLabel="v" />
+        <Key
+            android:codes="98"
+            android:keyLabel="b" />
+        <Key
+            android:codes="110"
+            android:keyLabel="n" />
+        <Key
+            android:codes="109"
+            android:keyLabel="m" />
+        <Key
+            android:codes="-5"
+            android:isRepeatable="true"
+            android:keyEdgeFlags="right"
+            android:keyIcon="@drawable/sym_keyboard_delete"
+            android:keyWidth="15%p" />
     </Row>
 
-
-    <Row  android:rowEdgeFlags="bottom">
-        <Key android:keyLabel="," android:codes="44" android:keyWidth="10%p" android:keyEdgeFlags="left"/>
-
-        <Key android:keyLabel="/" android:codes="47" android:keyWidth="10%p" />
-
-        <Key android:keyLabel="SPACE" android:codes="32" android:isRepeatable="true"/>
-
-        <Key android:keyLabel="DEL" android:codes="-5" android:keyWidth="20%p" android:isRepeatable="true"/>
-
-        <Key android:keyLabel="DONE" android:codes="-4" android:keyWidth="20%p" android:keyEdgeFlags="right"/>
-
+    <Row android:rowEdgeFlags="bottom">
+        <Key
+            android:codes="-2"
+            android:keyLabel="\?123"
+            android:keyWidth="12%p" />
+        <Key
+            android:codes="44"
+            android:keyLabel=","
+            android:keyWidth="13%p" />
+        <Key
+            android:codes="-101"
+            android:keyIcon="@drawable/sym_keyboard_language_switch"
+            android:keyWidth="10%p" />
+        <Key
+            android:codes="32"
+            android:isRepeatable="true"
+            android:keyIcon="@drawable/sym_keyboard_space"
+            android:keyWidth="35%p" />
+        <Key
+            android:codes="46"
+            android:keyLabel="."
+            android:keyWidth="13%p" />
+        <Key
+            android:codes="10"
+            android:keyEdgeFlags="right"
+            android:keyIcon="@drawable/sym_keyboard_return"
+            android:keyWidth="17%p" />
     </Row>
 </Keyboard>
