--- a/app/src/main/res/drawable/key_background.xml
+++ b/app/src/main/res/drawable/key_background.xml
@@ -7,6 +7,6 @@
         android:state_pressed="false"
         android:drawable="@drawable/normal"/>
 
-    <item android:state_pressed="false"
+    <item android:state_pressed="true"
         android:drawable="@drawable/pressed"/>
 </selector>
