--- a/app/src/main/res/drawable/normal.xml
+++ b/app/src/main/res/drawable/normal.xml
@@ -14,7 +14,8 @@
 
     <item android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background"></solid>
+              <solid android:color="@android:color/transparent"
+                ></solid>
         </shape>
     </item>
 </layer-list>
